# var_float

./: CMakeLists.txt  LICENSE.txt  README.md
include/: var_float.h
src/: var_float.c
tests/: var_float_tests.cpp
